# PPT

./: .gitignore  README.md  test2.txt  test_output.txt
.skills/: SKILL.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/routes/: generate.py  health.py  templates.py
backend/app/core/: exceptions.py
backend/app/graph/: nodes.py  pipeline.py  state.py
backend/app/graph/prompts/: planner_outline.txt  planner_populate.txt  planner_single_slide.txt
backend/app/models/: generation.py  template.py
backend/app/schemas/: slide_plan.py  template_profile.py
backend/app/services/: generation_service.py  template_service.py
backend/app/tools/: guidance_extractor.py  renderer.py  storage.py  template_parser.py  validator.py
backend/tests/: conftest.py  test_graph_nodes_backfill.py
backend/tests/test_api/: test_endpoints.py
backend/tests/test_tools/: __init__.py  test_renderer.py  test_slide_plan_schema.py  test_template_parser.py  test_validator.py
docs/: IMPLEMENTATION_PLAN.md  SLIDE_BY_SLIDE_PLAN_PROJECT.md
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Sidebar.jsx  Topbar.jsx
frontend/src/pages/: Dashboard.jsx  Generate.jsx  History.jsx  Templates.jsx
